# ChangeLog for app-arch/cabextract
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/cabextract/ChangeLog,v 1.86 2015/04/29 09:18:08 ago Exp $

  29 Apr 2015; Agostino Sarubbo <ago@gentoo.org> cabextract-1.6.ebuild:
  Stable for sparc, wrt bug #538152

  21 Apr 2015; Pacho Ramos <pacho@gentoo.org> cabextract-1.6.ebuild:
  ppc stable wrt bug #538152

  17 Apr 2015; Agostino Sarubbo <ago@gentoo.org> cabextract-1.6.ebuild:
  Stable for ppc64, wrt bug #538152

  14 Apr 2015; Agostino Sarubbo <ago@gentoo.org> cabextract-1.6.ebuild:
  Stable for ia64, wrt bug #538152

  13 Apr 2015; Agostino Sarubbo <ago@gentoo.org> cabextract-1.6.ebuild:
  Stable for alpha, wrt bug #538152

  09 Apr 2015; Markus Meier <maekke@gentoo.org> cabextract-1.6.ebuild:
  arm stable, bug #538152

  09 Apr 2015; Agostino Sarubbo <ago@gentoo.org> cabextract-1.6.ebuild:
  Stable for x86, wrt bug #538152

  09 Apr 2015; Agostino Sarubbo <ago@gentoo.org> cabextract-1.6.ebuild:
  Stable for amd64, wrt bug #538152

  06 Apr 2015; Jeroen Roovers <jer@gentoo.org> cabextract-1.6.ebuild:
  Stable for HPPA (bug #538152).

*cabextract-1.6 (29 Mar 2015)

  29 Mar 2015; Ben de Groot <yngwin@gentoo.org> +cabextract-1.6.ebuild,
  -cabextract-1.3.ebuild, cabextract-1.4.ebuild, metadata.xml:
  Version bump, which fixes security bugs #538152 and #540626. Bump EAPI. Rename
  extra-tools useflag to extras (bug #411643). Remove old.

  02 Mar 2015; Yixun Lan <dlan@gentoo.org> cabextract-1.4.ebuild:
  add arm64 support, tested on A53 board

  09 May 2012; Alexis Ballier <aballier@gentoo.org> cabextract-1.4.ebuild:
  keyword ~amd64-fbsd

  23 Apr 2012; Mike Frysinger <vapier@gentoo.org> cabextract-1.4.ebuild:
  Make sure to use correct ar tool.

  28 Feb 2012; Jeremy Olexa <darkside@gentoo.org> cabextract-1.4.ebuild:
  add prefix keywords as tested in the overlay

  25 Aug 2011; Jeroen Roovers <jer@gentoo.org> cabextract-1.4.ebuild: