@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile install
-DESCRIPTION=Extracts files from Microsoft cabinet archive files
-EAPI=4
-HOMEPAGE=http://www.cabextract.org.uk/
-IUSE=extras
-KEYWORDS=alpha amd64 arm ~arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris
-LICENSE=GPL-3
-RDEPEND=extras? ( dev-lang/perl )
-SLOT=0
-SRC_URI=http://www.cabextract.org.uk/cabextract-1.4.tar.gz
-_eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=2694c4fc0748b6121485109b3e7cb9c9
