@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/cabextract
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/cabextract/ChangeLog,v 1.86 2015/04/29 09:18:08 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/cabextract/ChangeLog,v 1.87 2015/05/02 13:41:07 yngwin Exp $
+
+  02 May 2015; Ben de Groot <yngwin@gentoo.org> -cabextract-1.4.ebuild:
+  Remove old, vulnerable version (bug #538152)
 
   29 Apr 2015; Agostino Sarubbo <ago@gentoo.org> cabextract-1.6.ebuild:
   Stable for sparc, wrt bug #538152
